@@ -1,4 +1,5 @@
 5.3.1 -> 5.3.2:
+    - jbj: pgp: retrieve pubkey from package header (if present).
     - jbj: pgp: add pgpArmorUnwrap to parse a pubkey from a buffer.
     - jbj: i18n: update po files (Translation Project).
     - jbj: fix: handle the V4 signature plaintext correctly.
